Add project and update README.md with set-up instructions