@@ -1,2 +1,6 @@
 # Marupeke
 A Java implementation of the puzzle game, Marupeke. It provides a simple user interface using JavaFX and can generate random puzzles of various sizes.
+
+## Set-up Instructions for JavaFX
+- Add "--module-path ../Marupeke/libs/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.media" as a run/debug VM option
+- Add JavaFX 'lib' folder as a project dependency found at '/Marupeke/libs/javafx-sdk-11.0.2/lib'
